--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,15 +1,15 @@
 <section class="mt-4">
 <div class="container">
-<form>
+<form action="/login" method="post">
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" id="form2Example1" class="form-control" placeholder="Email" />
+    <input type="email" id="form2Example1" class="form-control" placeholder="Email" name="email" />
     
   </div>
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" placeholder="Password" />
+    <input type="password" id="form2Example2" class="form-control" placeholder="Passwor" name="password" />
   </div>
 
   <!-- 2 column grid layout for inline styling -->
@@ -29,7 +29,7 @@
   </div>
 
   <!-- Submit button -->
-  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+  <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
 
   <!-- Register buttons -->
   <div class="text-center">
