--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -15,7 +15,7 @@
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="text" id="form3Example1c" class="form-control"
-                                                placeholder="Your Name" />
+                                                placeholder="Your Name" name="name">
 
                                         </div>
                                     </div>
@@ -24,7 +24,7 @@
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="email" id="form3Example3c" class="form-control"
-                                                placeholder="Your Email" />
+                                                placeholder="Your Email" name="email">
 
                                         </div>
                                     </div>
@@ -33,19 +33,19 @@
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="password" id="form3Example4c" class="form-control"
-                                                placeholder="Password" />
+                                                placeholder="Password" name="Password">
 
                                         </div>
                                     </div>
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
+                                    {{!-- <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="password" id="form3Example4cd" class="form-control"
-                                                placeholder="Repeat your password" />
+                                                placeholder="Repeat your password" name="confirmpassword">
 
                                         </div>
-                                    </div>
+                                    </div> --}}
 
 
 
