session and userlogin set

--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -9,7 +9,7 @@
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" placeholder="Passwor" name="password" />
+    <input type="password" id="form2Example2" class="form-control" placeholder="Password" name="password" />
   </div>
 
   <!-- 2 column grid layout for inline styling -->
