Cart and Delete option for items added

--- a/views/admin/addproducts.hbs
+++ b/views/admin/addproducts.hbs
@@ -16,6 +16,9 @@
                     <option>VR glasses</option>
                 </select>
 
+                <label for="exampleFormControlInput1">Price</label>
+                <input type="number" class="form-control" id="exampleFormControlInput1" name="price">
+
 
 
                 <label for="exampleFormControlTextarea1">Product Description</label>
