--- a/views/admin/admin-viewproducts.hbs
+++ b/views/admin/admin-viewproducts.hbs
@@ -20,6 +20,10 @@
       <td>{{this.description}}</td>
       <td>{{this.category}}</td>
       <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg"></td>
+      <td>
+        <a href="/edit-product" class="btn btn-primary">Edit</a>
+        <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete {{this.name}}?');">Delete</a>
+      </td>
     </tr>
     {{/each}}
     
