--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Xkart</a>
+    <a class="navbar-brand" href="/">Xkart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/">Products <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/cart">Cart</a>
+          <a class="nav-link" href="/cart">Cart<span class="badge badge-success">{{cartCount}}</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Orders</a>
