--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -62,12 +62,10 @@
                                         
                                         <td>
                                             <form class="form-inline">
-                                                <a class="btn btn-primary" id="minus" href="/change-product-quantity/{{this._id}}&&{{this.product._id}}&&-1" >-</a>&nbsp;
-                                                <input id="count" type="text" value="{{this.quantity}}" maxlength="2" size="1" class="count"
-                                                    style="border: 2px solid rgb(194, 191, 191);border-radius:5px" disabled>&nbsp;
-                                                <a class="btn btn-primary" href="/change-product-quantity/{{this._id}}&&{{this.product._id}}&&1" >+</a>&nbsp;
-                                                
-                                                <a  class="btn btn-danger">Remove</a>
+                                                <a class="btn btn-primary" onclick="changequantity('{{this._id}}','{{this.product._id}}',-1)">-</a>&nbsp;&nbsp;
+                                                <span id="{{this.product._id}}">{{this.quantity}}</span>&nbsp;&nbsp;
+                                                <a class="btn btn-primary" onclick="changequantity('{{this._id}}','{{this.product._id}}',1)">+</a>&nbsp;
+                                                <a class="btn btn-danger" >Remove</a>
                                                 
                                             </form>
                                             
@@ -95,4 +93,27 @@
 </div>
 
 <script>
+    function changequantity(cartId,proId,count){
+        let quantity=parseInt(document.getElementById(proId).innerHTML)
+        count=parseInt(count)
 
+        $.ajax({
+            url:'/change-product-quantity',
+            data:{
+                cart:cartId,
+                product:proId,
+                count:count,
+                quantity:quantity
+            },
+            method:'post',
+            success:(response)=>{
+                if(response.removeProduct){
+                    alert("product removed from cart")
+                    location.reload()
+                }else{
+                    document.getElementById(proId).innerHTML=quantity+count
+                }
+            }
+        })
+    }
+</script>
