--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -71,7 +71,7 @@
                                             
                                         </td>
                                         
-                                        <td>{{this.product.price}}</td>
+                                        <td>{{this.product.price}}&nbsp;x&nbsp;{{this.quantity}}</td>
                                         
                                         
                                     </tr>
