--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -4,10 +4,11 @@
       <div class="row">
         {{#each products}}
         <div class="col-md-3">
-          <div class="card" style="width: 18rem;height:25rem" align="center">
+          <div class="card" style="width: 18rem;height:27rem" align="center">
             <img class="card-img-top" src="/product-images/{{this._id}}.jpg" style="width:15rem ;height:15rem" >
             <div class="card-body">
               <h5 class="card-title">{{this.name}}</h5>
+              <p class="card-text">Rs.{{this.price}}</p>
               <p class="card-text">{{this.description}}</p>
               <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to cart</a>
             </div>
