--- a/views/admin/admin-viewproducts.hbs
+++ b/views/admin/admin-viewproducts.hbs
@@ -1,33 +1,41 @@
 <section>
-    <div class="container">
-        <div class="row mt-3">
-            <a href="/admin/addproducts" class="btn btn-success ml-auto">Add Products</a>
-        </div>
-        <table class="table mt-4">
-  <thead>
-    <tr>
-      
-      <th scope="col">Product Name</th>
-      <th scope="col">Decription</th>
-      <th scope="col">Category</th>
-      <th scope="col">Image</th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each products}}
-    <tr>
-      <th scope="row">{{this.name}}</th>
-      <td>{{this.description}}</td>
-      <td>{{this.category}}</td>
-      <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg"></td>
-      <td>
-        <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
-        <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete {{this.name}}?');">Delete</a>
-      </td>
-    </tr>
-    {{/each}}
-    
-  </tbody>
-</table>
+  <div class="container">
+    <div class="row mt-3">
+      <a href="/admin/addproducts" class="btn btn-success ml-auto mb-5">Add Products</a>
     </div>
+    <table class="table mt-5" id="product-table">
+      <thead>
+        <tr>
+
+          <th scope="col">Product Name</th>
+          <th scope="col">Decription</th>
+          <th scope="col">Category</th>
+          <th scope="col">Image</th>
+          <th scope="col">Options</th>
+        </tr>
+      </thead>
+      <tbody>
+        {{#each products}}
+        <tr>
+          <th scope="row">{{this.name}}</th>
+          <td>{{this.description}}</td>
+          <td>{{this.category}}</td>
+          <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg"></td>
+          <td>
+            <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
+            <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger"
+              onclick="return confirm('Are you sure you want to delete {{this.name}}?');">Delete</a>
+          </td>
+        </tr>
+        {{/each}}
+
+      </tbody>
+    </table>
+  </div>
 </section>
+
+<script>
+  $(document).ready( function () {
+    $('#product-table').DataTable();
+} );
+</script>
