--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -13,7 +13,7 @@
 
 
       {{#each products}}
-      <div class="col-md-3 col-lg-4 mt-4 mb-1">
+      <div class="col-12 col-md-6 col-lg-4 mt-4 mb-1">
         <div class="card" style="width: 18rem;height:27rem;background-color: #E9DCC9;" align="center">
           <div>
             <img class="card-img-top" src="/product-images/{{this._id}}.jpg" style="width:15rem ;height:15rem">
