--- a/views/user/updateprofile.hbs
+++ b/views/user/updateprofile.hbs
@@ -12,7 +12,7 @@
             <Label>Email: &nbsp;</Label><input type="text" class="text"  placeholder="{{user.email}}" name="email">
         </div>
         <div class="col-lg-12 mt-2" style="display: inline-block;">
-            <button class="btn btn-success" onclick="return confirm('You will be logged out once you update your credentials!!');">Update</button>
+            <button type="submit" class="btn btn-success" onclick="return confirm('You will be logged out once you update your credentials!!');">Update</button>
         </div>
         </form>
 
